refactor: add loger and some refactor on samad pkg
