# cmd/container.go
@@ -6,23 +6,17 @@ import (
 
 	_ "github.com/arya237/foodPilot/docs"
 	"github.com/arya237/foodPilot/internal/config"
-	"github.com/arya237/foodPilot/internal/handler/admin"
-	"github.com/arya237/foodPilot/internal/handler/auth"
-	"github.com/arya237/foodPilot/internal/handler/food"
-	"github.com/arya237/foodPilot/internal/handler/user"
+	"github.com/arya237/foodPilot/internal/db/tempdb"
 	"github.com/arya237/foodPilot/internal/repositories"
-	"github.com/arya237/foodPilot/internal/repositories/fakedb"
+	"github.com/arya237/foodPilot/internal/repositories/memory"
 	"github.com/arya237/foodPilot/internal/services"
+	"github.com/arya237/foodPilot/internal/web"
 	"github.com/arya237/foodPilot/pkg/reservations"
 	"github.com/arya237/foodPilot/pkg/reservations/samad"
-	"github.com/gin-contrib/cors"
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 type Container struct {
-	db *fakedb.FakeDb
+	db *tempdb.FakeDb
 
 	//repositories
 	UserRepo repositories.User
@@ -31,10 +25,8 @@ type Container struct {
 
 	//service
 	UserService    services.UserService
-	FoodService    services.FoodService
-	RateService    services.RateFoodService
 	AdminService   services.AdminService
-	Samad          reservations.RequiredFunctions
+	Samad          reservations.ReserveFunctions
 	ReserveService services.Reserve
 
 	mutex sync.RWMutex
@@ -44,100 +36,33 @@ func NewContainer() *Container {
 	return &Container{}
 }
 
-func (c *Container) SetUp(db *fakedb.FakeDb, conf *samad.Config) {
+func (c *Container) SetUp(db *tempdb.FakeDb, conf *samad.Config) {
 	c.mutex.Lock()
 	defer c.mutex.Unlock()
 	c.db = db
-	c.UserRepo = repositories.NewUserRepo(c.db)
-	c.FoodRepo = repositories.NewFoodRepo(c.db)
-	c.RateRepo = repositories.NewRateRepo(c.db)
+	c.UserRepo = memory.NewUserRepo(c.db)
+	c.FoodRepo = memory.NewFoodRepo(c.db)
+	c.RateRepo = memory.NewRateRepo(c.db)
 
-	c.UserService = services.NewUserService(c.UserRepo, conf)
-	c.FoodService = services.NewFoodService(c.FoodRepo)
-	c.RateService = services.NewRateFoodService(c.RateRepo, c.FoodRepo)
-	c.AdminService = services.NewAdminService(c.UserService, c.FoodService)
+	c.UserService = services.NewUserService(c.UserRepo, c.FoodRepo, c.RateRepo, conf)
+
+	c.AdminService = services.NewAdminService(c.UserRepo, c.FoodRepo)
 
 	c.Samad = samad.NewSamad(conf)
-	c.ReserveService = services.NewReserveService(c.UserService, c.RateService, c.Samad)
+	c.ReserveService = services.NewReserveService(c.UserRepo, c.UserService, c.Samad)
 }
 
-func (c *Container) GetFoodHandler() *food.FoodHandler {
-	c.mutex.RLock()
-	defer c.mutex.RUnlock()
-	foodHandler := food.NewFoodHandler(c.RateService, c.FoodService)
-	return foodHandler
-}
+func Run() error {
 
-func (c *Container) GetLoginHandler() *auth.LoginHandler {
-	c.mutex.RLock()
-	defer c.mutex.RUnlock()
-	loginHandler := auth.NewLoginHandler(time.Hour, c.UserService)
-	return loginHandler
-}
-
-func (c *Container) GetUserHandler() *user.UserHandler {
-	c.mutex.RLock()
-	defer c.mutex.RUnlock()
-	userHandler := user.NewUserHandler(c.UserService, c.RateService)
-	return userHandler
-}
-
-func (c *Container) GetAdminHandler() *admin.AdminHandler {
-	c.mutex.RLock()
-	defer c.mutex.RUnlock()
-	handler := admin.New(c.AdminService, c.ReserveService)
-	return handler
-}
-
-// @title                      FoodPilot
-// @description                Auto food reserve
-// @termsOfService             http://swagger.io/terms/
-// @contact.name               FoodPilot Dev Team
-// @contact.url                https://github.com/arya237/foodPilot
-// @securityDefinitions.apikey BearerAuth
-// @in                         header
-// @name                       Authorization
-// @description                Type `Bearer ` followed by your JWT token. example: "Bearer abcde12345"
-func NewApp() (*gin.Engine, error) {
-	engine := gin.Default()
-	swaggerHandler := ginSwagger.WrapHandler(swaggerFiles.Handler,
-		ginSwagger.DocExpansion("none"),
-	)
-
-	corsConfig := cors.Config{
-		AllowOrigins: []string{"*"},
-		AllowMethods: []string{"GET", "POST", "PUT", "DELETE"},
-		AllowHeaders: []string{"Origin", "Content-Type", "Accept", "Authorization"},
-	}
-
-	engine.Use(cors.New(corsConfig))
-
-	engine.GET("/swagger/*any", swaggerHandler)
-
-	
 	conf, err := config.New()
 	if err != nil {
-		return nil, err
+		return err
 	}
 
-	db := fakedb.NewDb(conf.DBConfig)
+	db := tempdb.NewDb(conf.DBConfig)
 	container := NewContainer()
 	container.SetUp(db, conf.SamadConfig)
 
-	foodHandlers := container.GetFoodHandler()
-	authHandlers := container.GetLoginHandler()
-	userHandler := container.GetUserHandler()
-	adminHandler := container.GetAdminHandler()
-
-	authGroup := engine.Group("/auth")
-	foodGroup := engine.Group("/food")
-	userGroup := engine.Group("/user")
-	adminGroup := engine.Group("/admin")
-
-	auth.RegisterRoutes(authGroup, authHandlers)
-	food.RegisterRoutes(foodGroup, foodHandlers)
-	user.RegisterRoutes(userGroup, userHandler)
-	admin.RegisterRoutes(adminGroup, *adminHandler)
-
-	return engine, nil
+	return web.Start(time.Hour, container.UserService,
+		container.AdminService, container.ReserveService)
 }
