# docs/swagger.yaml
@@ -1,4 +1,23 @@
 definitions:
+  admin.AddNewFoodRequest:
+    properties:
+      food:
+        type: string
+    type: object
+  admin.AddNewUserRequest:
+    properties:
+      password:
+        type: string
+      role:
+        $ref: '#/definitions/models.UserRole'
+      username:
+        type: string
+    type: object
+  admin.AddNewUserResponse:
+    properties:
+      ID:
+        type: integer
+    type: object
   admin.ErrorResponse:
     properties:
       error:
@@ -19,12 +38,33 @@ definitions:
           $ref: '#/definitions/models.User'
         type: array
     type: object
+  admin.MessageResponse:
+    properties:
+      message:
+        example: message
+        type: string
+    type: object
   admin.ReserveFoodResponse:
     properties:
       results:
         items:
           $ref: '#/definitions/services.UserReserveResult'
         type: array
+    type: object
+  admin.UpdateUserRequest:
+    properties:
+      autosave:
+        type: boolean
+      password:
+        type: string
+      role:
+        $ref: '#/definitions/models.UserRole'
+      token:
+        type: string
+      userid:
+        type: integer
+      username:
+        type: string
     type: object
   auth.ErrorResponse:
     properties:
@@ -69,37 +109,6 @@ definitions:
         type: string
       token:
         example: generated token
-        type: string
-    type: object
-  food.ErrorResponse:
-    properties:
-      error:
-        example: error message
-        type: string
-    type: object
-  food.GetFoodsResponse:
-    properties:
-      foods:
-        items:
-          $ref: '#/definitions/models.Food'
-        type: array
-    type: object
-  food.RateFoodsRequest:
-    properties:
-      foods:
-        additionalProperties:
-          type: integer
-        example:
-          foodName1: 93
-          foodName2: 74
-          foodName3: 80
-        type: object
-    required:
-    - foods
-    type: object
-  food.RateFoodsResponse:
-    properties:
-      message:
         type: string
     type: object
   models.Food:
@@ -209,6 +218,31 @@ definitions:
         example: error message
         type: string
     type: object
+  user.GetFoodsResponse:
+    properties:
+      foods:
+        items:
+          $ref: '#/definitions/models.Food'
+        type: array
+    type: object
+  user.RateFoodsRequest:
+    properties:
+      foods:
+        additionalProperties:
+          type: integer
+        example:
+          foodName1: 93
+          foodName2: 74
+          foodName3: 80
+        type: object
+    required:
+    - foods
+    type: object
+  user.RateFoodsResponse:
+    properties:
+      message:
+        type: string
+    type: object
   user.RatesResponse:
     properties:
       rates:
@@ -228,7 +262,7 @@ info:
   termsOfService: http://swagger.io/terms/
   title: FoodPilot
 paths:
-  /admin/foods:
+  /api/admin/food:
     get:
       description: Return all the foods
       produces:
@@ -247,7 +281,67 @@ paths:
       summary: Get food
       tags:
       - Admin
-  /admin/reserve:
+    post:
+      consumes:
+      - application/json
+      description: Register new food
+      parameters:
+      - description: Food info
+        in: body
+        name: newFood
+        required: true
+        schema:
+          $ref: '#/definitions/admin.AddNewFoodRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/admin.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Add new food
+      tags:
+      - Admin
+  /api/admin/food/{foodID}:
+    delete:
+      description: Delete food
+      parameters:
+      - description: Food ID
+        in: path
+        name: foodID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete food
+      tags:
+      - Admin
+  /api/admin/reserve:
     post:
       description: Reserve food for all users
       produces:
@@ -266,7 +360,7 @@ paths:
       summary: Reserve food
       tags:
       - Admin
-  /admin/users:
+  /api/admin/user:
     get:
       description: Return all the users
       produces:
@@ -285,7 +379,94 @@ paths:
       summary: Get users
       tags:
       - Admin
-  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Register new user
+      parameters:
+      - description: User info
+        in: body
+        name: newUser
+        required: true
+        schema:
+          $ref: '#/definitions/admin.AddNewUserRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/admin.AddNewUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Add new user
+      tags:
+      - Admin
+    put:
+      consumes:
+      - application/json
+      description: Update user
+      parameters:
+      - description: user info
+        in: body
+        name: userInfo
+        required: true
+        schema:
+          $ref: '#/definitions/admin.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Accepted
+          schema:
+            $ref: '#/definitions/admin.GetFoodsResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update user
+      tags:
+      - Admin
+  /api/admin/user/{userID}:
+    delete:
+      description: Delete user
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/admin.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete user
+      tags:
+      - Admin
+  /api/auth/login:
     post:
       consumes:
       - application/json
@@ -315,7 +496,7 @@ paths:
       summary: login a user
       tags:
       - Auth
-  /auth/signup:
+  /api/auth/signup:
     post:
       consumes:
       - application/json
@@ -345,58 +526,7 @@ paths:
       summary: signup a new user
       tags:
       - Auth
-  /food/list:
-    get:
-      description: Return all the foods
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/food.GetFoodsResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/food.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get foods
-      tags:
-      - Food
-  /food/rate:
-    post:
-      consumes:
-      - application/json
-      description: Rates all the foods
-      parameters:
-      - description: Rates info
-        in: body
-        name: rates
-        required: true
-        schema:
-          $ref: '#/definitions/food.RateFoodsRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/food.RateFoodsResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/food.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/food.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Rates foods
-      tags:
-      - Food
-  /user/autosave:
+  /api/user/autosave:
     post:
       consumes:
       - application/json
@@ -426,7 +556,39 @@ paths:
       summary: Toggle user autosave
       tags:
       - User
-  /user/rates:
+  /api/user/rate:
+    post:
+      consumes:
+      - application/json
+      description: Rates all the foods
+      parameters:
+      - description: Rates info
+        in: body
+        name: rates
+        required: true
+        schema:
+          $ref: '#/definitions/user.RateFoodsRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.RateFoodsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Rates foods
+      tags:
+      - User
+  /api/user/rates:
     get:
       description: return user rates
       responses:
@@ -445,6 +607,25 @@ paths:
       security:
       - BearerAuth: []
       summary: return user rates
+      tags:
+      - User
+  /api/user/view-foods:
+    get:
+      description: Return all the foods
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.GetFoodsResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/user.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get foods
       tags:
       - User
 securityDefinitions:
